--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,3 +5,10 @@ stages:
     - src/data/data_ingestion.py
     outs:
     - data/raw
+  data_preprocessing:
+    cmd: python src/data/data_preprocessing.py
+    deps:
+    - data/raw
+    - src/data/data_preprocessing.py
+    outs:
+    - data/interim
