--- a/dvc.yaml
+++ b/dvc.yaml
@@ -12,3 +12,12 @@ stages:
     - src/data/data_preprocessing.py
     outs:
     - data/interim
+  feature_engineering:
+    cmd: python src/features/feature_engineering.py
+    deps:
+    - data/interim
+    - src/features/feature_engineering.py
+    outs:
+    - data/processed
+    - models/resampler.pkl
+    - models/vector.pkl
