--- a/params.yaml
+++ b/params.yaml
@@ -1,2 +1,16 @@
 data_ingestion:
   test_size : 0.2
+
+model_building:
+  n_estimators : 817
+  max_depth : 14
+  num_leaves : 206
+  colsample_bytree : 0.6252
+  subsample : 0.5079
+  reg_alpha : 1.9391
+  reg_lambda : 9.9170
+  scale_pos_weight : 4.9089
+  learning_rate : 0.0548
+  min_split_gain : 0.1039
+  min_child_samples : 25
+  
